welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:33: error: ')' expected but ';' found.
			setPos(x,y);
                                   ^